@@ -1,3 +1,7 @@
+2009-05-13  Diego Novillo  <dnovillo@google.com>
+
+	* lto-lang.c (LANG_HOOKS_GET_ALIAS_SET): Define.
+
 2009-05-07  Diego Novillo  <dnovillo@google.com>
 
 	* lto.c (lto_resolution_read): Add type casts for C++ warnings.
